[project]
name = "mdtotex"
version = "0.1.0"
description = "Markdown to LaTeX converter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown>=3.5"
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["md2tex"]
